--- a/src/components/Shared/Navbar/Navbar.css
+++ b/src/components/Shared/Navbar/Navbar.css
@@ -7,3 +7,32 @@
     background-color: #fff;
     color: #1f2937;
 } */
+
+.underHover::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 0.175rem;
+    left: 0;
+    bottom: 0;
+    background: steelblue;
+}
+
+.underHoverBtn::after {
+    content: '';
+    position: absolute;
+    width: 90%;
+    height: 0.150rem;
+    left: 0;
+    bottom: 5px;
+    margin:0 5px;
+    background: steelblue;
+}
+.underHoverCenter::after {
+    transform: scale(0, 1);
+    transition: transform 0.3s ease;
+}
+
+.underHoverCenter:hover::after {
+    transform: scale(1, 1);
+}
