--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   height: 40vmin;
   pointer-events: none;
 }
-/* toggle--button */
+/* toggle------- -button */
 .dark {
 background-color:#1f2937 ;
   color: #fff;
@@ -15,6 +15,82 @@ background-color:#1f2937 ;
   background-color: #fff;
   color: #1f2937;
 }
+
+/*----- Hover Underline Effect -------*/
+
+ .underHover::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 0.175rem;
+  left: 0;
+  bottom: 0;
+  background: steelblue;
+}
+
+.underHoverCenter{
+  position: relative;
+}
+.underHoverCenter::after {
+  transform: scale(0, 1);
+  transition: transform 0.3s ease;
+}
+
+.underHoverCenter:hover::after {
+  transform: scale(1, 1);
+}
+
+
+/* ------ animation left ------- */
+.underHoverLeft{
+  position: relative;
+}
+.underHoverLeft::after {
+  transform: scale(0, 1);
+  transform-origin: 0% 100%;
+  transition: transform 0.3s ease;
+}
+
+.underHoverLeft:hover::after {
+  transform: scale(1, 1);
+
+}
+
+/* animation left to right then right to left */
+/* .underHoverLeftToRight{
+  position: relative;
+}
+.underHoverLeftToRight::after {
+  transform: scale(0, 1);
+  transform-origin: 100% 0%;
+  transition: transform 0.3s ease;
+}
+
+.underHoverLeftToRight:hover::after {
+  transform: scale(1, 1);
+  transform-origin: 0% 100%;
+} */
+
+/* .underHoverLeft:hover::before {
+    transform: scale(1, 0);
+} */
+
+/* animation button */
+.underHoverButton {
+  overflow: hidden;
+}
+
+.underHoverButton::after {
+  transform: translateY(3px);
+  transition: transform 0.3s ease;
+}
+
+.underHoverButton:hover:after {
+  transform: translateY(0);
+
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
