--- a/src/components/Home/Trends/Trends.css
+++ b/src/components/Home/Trends/Trends.css
@@ -1,48 +1,54 @@
-.underHover::after {
+.underHoverTrend::after {
     content: '';
-    position: absolute;
-    width: 100%;
-    height: 0.175rem;
-    left: 0;
-    bottom: 0;
-    background:steelblue;
+        position: absolute;
+        width: 100%;
+        height: 0.150rem;
+        left: 0;
+      
+        bottom: 0;
+        background: steelblue;
 }
 
-.underHoverCenterBanner::after {
-    transform: scale(0,1);
-    transition: transform 0.3s ease ;
+/* .underHoverCenter::after {
+    transform: scale(0, 1);
+    transition: transform 0.3s ease;
 }
-.underHoverCenterBanner:hover::after {
-    transform: scale(1,1);
-}
+
+.underHoverCenter:hover::after {
+    transform: scale(1, 1);
+} */
 
 
 /* animation left */
+/* .underHoverLeft{
+position: relative;
+}
 .underHoverLeft::after {
     transform: scale(0, 1);
     transform-origin: 0% 100%;
     transition: transform 0.3s ease;
+   
+ 
 }
 
 .underHoverLeft:hover::after {
     transform: scale(1, 1);
-    
-}
+   
+
+} */
 
 /* animation left to right then right to left */
-.underHoverLeftToRight {
-    position: absolute;
-}
 
-.underHoverLeftToRight::after {
+.underHoverLeftToRightTrend::after {
     transform: scale(0, 1);
     transform-origin: 100% 0%;
     transition: transform 0.3s ease;
 }
 
-.underHoverLeftToRight:hover::after {
+.underHoverLeftToRightTrend:hover::after {
     transform: scale(1, 1);
     transform-origin: 0% 100%;
+
 }
 
 /* .underHoverLeft:hover::before {
@@ -53,11 +59,13 @@
 /* .underHoverButton {
     overflow: hidden;
 }
+
 .underHoverButton::after {
-   transform: translateY(3px);
+    transform: translateY(3px);
     transition: transform 0.3s ease;
 }
+
 .underHoverButton:hover:after {
-   transform: translateY(0);
- 
+    transform: translateY(0);
+
 } */
