--- a/src/components/Home/Trends/Trends.css
+++ b/src/components/Home/Trends/Trends.css
@@ -4,19 +4,40 @@
         width: 100%;
         height: 0.150rem;
         left: 0;
-      
         bottom: 0;
         background: steelblue;
 }
+.underHoverTrendText::after {
+        background: steelblue;
+}
 
-/* .underHoverCenter::after {
+
+/* animation left */
+
+/* .underHoverLeftText{ 
+   
+}
+
+.underHoverLeftText:hover {
+transition-duration: 500ms;
+    text-decoration-line: underline;
+    
+  
+   
+
+} */
+
+.underHoverCenterTrend{
+    position: relative;
+}
+.underHoverCenterTrend::after {
     transform: scale(0, 1);
     transition: transform 0.3s ease;
 }
 
-.underHoverCenter:hover::after {
+.underHoverCenterTrend:hover::after {
     transform: scale(1, 1);
-} */
+}
 
 
 /* animation left */
@@ -38,7 +59,9 @@ position: relative;
 } */
 
 /* animation left to right then right to left */
-
+.underHoverLeftToRightTrend{
+    position: relative;
+}
 .underHoverLeftToRightTrend::after {
     transform: scale(0, 1);
     transform-origin: 100% 0%;
